--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"node": ">=14.15.0",
 		"npm": ">=6.14.8"
 	},
-	"author": "The WordPress Contributors",
+	"author": "The WordPress Contributors11",
 	"license": "GPL-2.0-or-later",
 	"browserslist": [
 		"> 1%",
